# idli-v2

./: .gitignore  .gitmodules  Makefile  README.md
asm/: bsearch.asm  bsearch.yaml  fib.asm  fib.yaml  fnv1a.asm  fnv1a.yaml  gcd.asm  gcd.yaml  ld.asm  ld.yaml  memcpy.asm  op32.asm  op32.yaml  org.asm  pins.asm  pins.yaml  qsort.asm  qsort.yaml  smoke.asm  st.asm  st.yaml  test-wrapper.asm
asm/tgen/: all.asm  all.yaml  alu.asm  branch.asm  cmp.asm  io.asm  io.yaml  ld.asm  mem.asm  membranch.asm  memcmp.asm  noio.asm  pins.asm  pins.yaml  shift.asm  simple.asm  simplebranch.asm  st.asm  uart.asm  uart.yaml
podi/: CMakeLists.txt  main.c  sqi.h  sqi.pio
scripts/: asm.py  hexdump.py  idli.lark  isa.py  objdump.py  pico.py  podi.py  regress.sh  requirements.txt  sim.py  sqi.py  tb.py  tgen.py  uart.py
src/: idli_alu_m.sv  idli_decode_m.sv  idli_decode_m.sv.bak  idli_ex_m.sv  idli_lifo_m.sv  idli_pc_m.sv  idli_pkg.svh  idli_rf_m.sv  idli_shift_m.sv  idli_sqi_buf_m.sv  idli_sqi_m.sv  idli_sqi_m.sv.bak  idli_top_m.sv  idli_urx_m.sv  idli_utx_m.sv
test/: Makefile  idli_sqi_mem_m.sv  idli_tb_fpga_m.sv  idli_tb_m.sv  run_test.py
test/bias/: all.seed  all.yaml  alu.seed  alu.yaml  branch.seed  branch.yaml  cmp.seed  cmp.yaml  io.seed  io.yaml  ld.seed  ld.yaml  mem.seed  mem.yaml  membranch.seed  membranch.yaml  memcmp.seed  memcmp.yaml  noio.seed  noio.yaml  pins.seed  pins.yaml  shift.seed  shift.yaml  simple.seed  simple.yaml  simplebranch.seed  simplebranch.yaml  st.seed  st.yaml  uart.seed  uart.yaml
